--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,7 @@
 UNRELEASED
 ----------
 
+- Added support for Python 3.10.
 - Dropped deprecated setting ``AUTH_LDAP_CACHE_GROUPS``.
 - Callables passed to ``AUTH_LDAP_SERVER_URI`` must now take a ``request`` positional argument.
 - Dropped support for Django 3.0.
